Updating modaal wrapper and bg z-index. Fixes #86

--- a/source/css/_vendor.modaal.scss
+++ b/source/css/_vendor.modaal.scss
@@ -51,7 +51,7 @@ $modaal-grey: #afb7bc;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 999;
+	z-index: 99999;
 	opacity: 0;
 }
 
@@ -62,7 +62,7 @@ $modaal-grey: #afb7bc;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 9999;
+	z-index: 100000;
 	overflow: auto;
 	opacity: 1;
 	box-sizing: border-box;
